--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -543,6 +543,114 @@
             font-size: 0.85rem;
             color: var(--text-secondary);
         }
+
+        .metrics-container {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin: 20px auto;
+            max-width: 1200px;
+        }
+
+        .metrics-column {
+            flex: 1;
+            background: rgba(26, 26, 35, 0.8);
+            border-radius: 15px;
+            padding: 20px;
+        }
+
+        .metrics-column h3 {
+            font-size: 1.1rem;
+            color: var(--text-primary);
+            margin-bottom: 15px;
+            text-align: center;
+            border-bottom: 1px solid rgba(139, 92, 246, 0.2);
+            padding-bottom: 10px;
+        }
+
+        .confronto-resumo {
+            text-align: center;
+            margin: 30px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .confronto-stats {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            background: rgba(26, 26, 35, 0.8);
+            border-radius: 15px;
+        }
+
+        .stat-block {
+            text-align: center;
+        }
+
+        .stat-value {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .stat-value.home {
+            color: #ff69b4;
+        }
+
+        .stat-value.draw {
+            color: #808080;
+        }
+
+        .stat-value.away {
+            color: #4169e1;
+        }
+
+        .stat-label {
+            font-size: 0.9rem;
+            color: var(--text-secondary);
+        }
+
+        .stat-detail {
+            font-size: 0.8rem;
+            color: #666;
+            margin-top: 2px;
+        }
+
+        .game-history {
+            display: flex;
+            gap: 8px;
+            justify-content: center;
+            margin-top: 15px;
+        }
+
+        .history-dot {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            transition: transform 0.2s;
+        }
+
+        .history-dot.home {
+            background: #ff69b4;
+        }
+
+        .history-dot.draw {
+            background: #808080;
+        }
+
+        .history-dot.away {
+            background: #4169e1;
+        }
+
+        .history-dot:hover {
+            transform: scale(1.2);
+        }
     </style>
 </head>
 
@@ -647,28 +755,46 @@
         function renderProbabilities(h2hStats, playerAName, playerBName) {
             const container = document.getElementById('probabilityCards');
             const totalGames = h2hStats.totalGames;
+            const last10Games = Math.min(totalGames, 10);
 
             const homeWinPercent = ((h2hStats.winHome / totalGames) * 100).toFixed(1);
             const awayWinPercent = ((h2hStats.winAway / totalGames) * 100).toFixed(1);
             const drawPercent = ((h2hStats.draw / totalGames) * 100).toFixed(1);
 
+            // Criar array dos últimos 10 resultados (simulado)
+            const gameResults = [];
+            for (let i = 0; i < last10Games; i++) {
+                if (i < h2hStats.winHome) gameResults.push('home');
+                else if (i < h2hStats.winHome + h2hStats.draw) gameResults.push('draw');
+                else gameResults.push('away');
+            }
+
             const probabilityHTML = `
-            <div class="probability-card">
-                <h4>Vitória ${playerAName}</h4>
-                <div class="probability-value">${homeWinPercent}%</div>
-                <p>Em ${h2hStats.winHome} de ${totalGames} jogos</p>
-            </div>
-            <div class="probability-card">
-                <h4>Empate</h4>
-                <div class="probability-value">${drawPercent}%</div>
-                <p>Em ${h2hStats.draw} de ${totalGames} jogos</p>
-            </div>
-            <div class="probability-card">
-                <h4>Vitória ${playerBName}</h4>
-                <div class="probability-value">${awayWinPercent}%</div>
-                <p>Em ${h2hStats.winAway} de ${totalGames} jogos</p>
-            </div>
-        `;
+                <div class="confronto-resumo">
+                    <div class="confronto-stats">
+                        <div class="stat-block">
+                            <div class="stat-value home">${h2hStats.winHome}</div>
+                            <div class="stat-label">Vitórias</div>
+                            <div class="stat-detail">${homeWinPercent}%</div>
+                        </div>
+                        <div class="stat-block">
+                            <div class="stat-value draw">${h2hStats.draw}</div>
+                            <div class="stat-label">Empates</div>
+                            <div class="stat-detail">${drawPercent}%</div>
+                        </div>
+                        <div class="stat-block">
+                            <div class="stat-value away">${h2hStats.winAway}</div>
+                            <div class="stat-label">Vitórias</div>
+                            <div class="stat-detail">${awayWinPercent}%</div>
+                        </div>
+                    </div>
+                    <div class="game-history">
+                        ${gameResults.map(result => `
+                            <div class="history-dot ${result}"></div>
+                        `).join('')}
+                    </div>
+                </div>
+            `;
 
             container.innerHTML = probabilityHTML;
         }
@@ -678,50 +804,57 @@
             const totalGames = stats.totalGames;
 
             const h2hStatsHTML = `
-                <div class="h2h-stat-card">
-                    <h4>Over 1.5 HT</h4>
-                    <div class="h2h-stat-value">${((stats.over1_5HT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.over1_5HT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>Over 2.5 HT</h4>
-                    <div class="h2h-stat-value">${((stats.over2_5HT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.over2_5HT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>Over 2.5 FT</h4>
-                    <div class="h2h-stat-value">${((stats.over2_5FT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.over2_5FT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>Over 3.5 FT</h4>
-                    <div class="h2h-stat-value">${((stats.over3_5FT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.over3_5FT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>Over 4.5 FT</h4>
-                    <div class="h2h-stat-value">${((stats.over4_5FT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.over4_5FT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>BTTS HT</h4>
-                    <div class="h2h-stat-value">${((stats.bttsHT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.bttsHT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>BTTS FT</h4>
-                    <div class="h2h-stat-value">${((stats.bttsFT / totalGames) * 100).toFixed(1)}%</div>
-                    <p>Em ${stats.bttsFT} de ${totalGames} jogos</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>Média Gols HT</h4>
-                    <div class="h2h-stat-value">${(stats.totalGoalsHT / totalGames).toFixed(2)}</div>
-                    <p>Total: ${stats.totalGoalsHT} gols</p>
-                </div>
-                <div class="h2h-stat-card">
-                    <h4>Média Gols FT</h4>
-                    <div class="h2h-stat-value">${(stats.totalGoalsFT / totalGames).toFixed(2)}</div>
-                    <p>Total: ${stats.totalGoalsFT} gols</p>
+                <div class="metrics-container">
+                    <div class="metrics-column">
+                        <h3>Estatísticas HT</h3>
+                        <div class="stats-grid">
+                            <div class="h2h-stat-card">
+                                <h4>Over 1.5 HT</h4>
+                                <div class="h2h-stat-value">${((stats.over1_5HT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over1_5HT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Over 2.5 HT</h4>
+                                <div class="h2h-stat-value">${((stats.over2_5HT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over2_5HT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>BTTS HT</h4>
+                                <div class="h2h-stat-value">${((stats.bttsHT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.bttsHT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Média Gols HT</h4>
+                                <div class="h2h-stat-value">${(stats.totalGoalsHT / totalGames).toFixed(2)}</div>
+                                <p>Total: ${stats.totalGoalsHT} gols</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="metrics-column">
+                        <h3>Estatísticas FT</h3>
+                        <div class="stats-grid">
+                            <div class="h2h-stat-card">
+                                <h4>Over 2.5 FT</h4>
+                                <div class="h2h-stat-value">${((stats.over2_5FT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over2_5FT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Over 3.5 FT</h4>
+                                <div class="h2h-stat-value">${((stats.over3_5FT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over3_5FT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>BTTS FT</h4>
+                                <div class="h2h-stat-value">${((stats.bttsFT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.bttsFT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Média Gols FT</h4>
+                                <div class="h2h-stat-value">${(stats.totalGoalsFT / totalGames).toFixed(2)}</div>
+                                <p>Total: ${stats.totalGoalsFT} gols</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             `;
 
