--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -243,9 +243,10 @@
             background: rgba(26, 26, 35, 0.8);
             border-radius: 20px;
             padding: 30px;
-            margin: 40px 0;
+            margin: 40px auto;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(139, 92, 246, 0.1);
+            max-width: 1400px;
         }
 
         .h2h-stats-grid {
@@ -270,13 +271,14 @@
         }
 
         .h2h-stat-value {
-            font-size: 2rem;
+            font-size: 2.2rem;
+            font-weight: bold;
+            color: var(--accent-purple);
+            margin: 10px 0;
             background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
-            font-weight: bold;
-            margin: 10px 0;
         }
 
         .game-card {
@@ -547,83 +549,101 @@
         .metrics-container {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px;
             margin: 20px auto;
-            max-width: 1400px;
-            padding: 0 20px;
         }
 
         .metrics-column {
             flex: 1;
             background: rgba(26, 26, 35, 0.8);
             border-radius: 15px;
-            padding: 20px;
+            padding: 25px;
         }
 
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
+            gap: 20px;
         }
 
         .h2h-stat-card {
             background: rgba(32, 32, 44, 0.8);
-            padding: 15px;
+            padding: 20px;
             border-radius: 10px;
             text-align: center;
         }
 
         .h2h-stat-value {
-            font-size: 1.8rem;
+            font-size: 2.2rem;
             font-weight: bold;
             color: var(--accent-purple);
-            margin: 5px 0;
+            margin: 10px 0;
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         .confronto-resumo {
             text-align: center;
             margin: 20px auto;
-            max-width: 800px;
+            max-width: 1000px;
             background: rgba(26, 26, 35, 0.8);
             border-radius: 15px;
-            padding: 20px;
+            padding: 25px;
         }
 
         .confronto-stats {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
+            padding: 0 50px;
         }
 
         .stat-block {
             flex: 1;
             text-align: center;
-            padding: 0 10px;
+            padding: 0 20px;
         }
 
         .stat-value {
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: bold;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
             line-height: 1;
         }
 
         .game-history {
             display: flex;
-            gap: 8px;
+            gap: 12px;
             justify-content: center;
-            margin-top: 15px;
+            margin-top: 20px;
             background: rgba(0, 0, 0, 0.2);
-            padding: 10px;
+            padding: 15px;
             border-radius: 10px;
         }
 
         .history-dot {
-            width: 10px;
-            height: 10px;
+            width: 14px;
+            height: 14px;
             border-radius: 50%;
             transition: transform 0.2s;
+        }
+
+        .history-dot.home {
+            background: #ff69b4;
+            box-shadow: 0 0 10px rgba(255, 105, 180, 0.5);
+        }
+
+        .history-dot.away {
+            background: #4169e1;
+            box-shadow: 0 0 10px rgba(65, 105, 225, 0.5);
+        }
+
+        .history-dot.draw {
+            background: #808080;
+            box-shadow: 0 0 10px rgba(128, 128, 128, 0.5);
         }
 
         .container {
@@ -637,26 +657,41 @@
 
         .player-section {
             margin: 0;
+            padding: 25px;
+        }
+
+        .metrics-section {
+            background: rgba(26, 26, 35, 0.8);
+            border-radius: 15px;
+            padding: 25px;
+            margin-bottom: 30px;
         }
 
         .metrics-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 10px;
-        }
-
-        .metric-item {
-            padding: 10px;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 15px;
         }
 
         #h2hGames {
             max-width: 1400px;
-            padding: 0 20px;
+            margin: 20px auto;
+            padding: 25px;
+        }
+
+        #h2hGamesList {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
         }
 
         .game-card {
-            max-width: none;
-            margin: 10px 0;
+            background: rgba(32, 32, 44, 0.8);
+            border-radius: 10px;
+            padding: 15px;
+            margin: 0;
+            width: 100%;
         }
     </style>
 </head>
@@ -955,28 +990,50 @@
 
         function renderH2HGames(games) {
             const container = document.getElementById('h2hGamesList');
+            const recentGames = games.slice(0, 10);
 
-            const gamesHTML = games.map(game => `
-                <div class="game-card">
-                    <div class="game-info">
-                        <div class="team-vs">
-                            <img src="${game.homeImage}" alt="${game.home}">
-                            <span>vs</span>
-                            <img src="${game.awayImage}" alt="${game.away}">
-                        </div>
-                        <div class="score-info">
-                            <span class="score">${game.scoreHT} (${game.score})</span>
-                            <span class="date">${game.date}</span>
+            const gamesHTML = recentGames.map(game => {
+                const [homeGoals, awayGoals] = game.score.split('-').map(Number);
+                let resultClass;
+                if (homeGoals > awayGoals) {
+                    resultClass = 'home';
+                } else if (awayGoals > homeGoals) {
+                    resultClass = 'away';
+                } else {
+                    resultClass = 'draw';
+                }
+
+                return `
+                    <div class="game-card">
+                        <div class="game-info">
+                            <div class="team-vs">
+                                <img src="${game.homeImage}" alt="${game.home}">
+                                <span>vs</span>
+                                <img src="${game.awayImage}" alt="${game.away}">
+                            </div>
+                            <div class="score-info">
+                                <span class="score">${game.scoreHT} (${game.score})</span>
+                                <span class="date">${game.date}</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            `).join('');
+                `;
+            }).join('');
 
             const dotsHTML = `
                 <div class="game-dots">
-                    ${games.map((_, index) => `
-                        <div class="game-dot ${index === games.length - 1 ? 'active' : ''}"></div>
-                    `).join('')}
+                    ${recentGames.map(game => {
+                const [homeGoals, awayGoals] = game.score.split('-').map(Number);
+                let resultClass;
+                if (homeGoals > awayGoals) {
+                    resultClass = 'home';
+                } else if (awayGoals > homeGoals) {
+                    resultClass = 'away';
+                } else {
+                    resultClass = 'draw';
+                }
+                return `<div class="history-dot ${resultClass}" title="${game.home} ${game.score} ${game.away}"></div>`;
+            }).join('')}
                 </div>
             `;
 
