--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -134,11 +134,13 @@
         .confronto-resumo {
             background: var(--glass-bg);
             border-radius: 20px;
-            padding: 30px;
+            padding: 40px;
             border: 1px solid var(--glass-border);
             backdrop-filter: blur(10px);
             position: relative;
             overflow: hidden;
+            margin: 40px auto;
+            max-width: 1400px;
         }
 
         .confronto-resumo::before {
@@ -158,13 +160,13 @@
         .confronto-stats {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
-            margin-bottom: 40px;
+            gap: 40px;
+            margin-bottom: 50px;
         }
 
         .stat-block {
             text-align: center;
-            padding: 20px;
+            padding: 30px;
             background: rgba(0, 0, 0, 0.2);
             border-radius: 15px;
             position: relative;
@@ -187,9 +189,9 @@
         }
 
         .stat-block .stat-value {
-            font-size: 4rem;
+            font-size: 4.5rem;
             font-weight: 800;
-            margin: 15px 0;
+            margin: 20px 0;
             position: relative;
         }
 
@@ -215,41 +217,41 @@
         }
 
         .stat-block .stat-label {
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             color: var(--text-primary);
-            margin: 15px 0;
+            margin: 20px 0;
             font-weight: 600;
             letter-spacing: 1px;
         }
 
         .stat-block .stat-detail {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             font-weight: bold;
             letter-spacing: 0.5px;
         }
 
         .game-history-container {
-            margin-top: 40px;
+            margin: 50px auto;
             text-align: center;
         }
 
         .game-history-title {
-            font-size: 1.5rem;
+            font-size: 2rem;
             color: var(--text-primary);
-            margin-bottom: 25px;
+            margin-bottom: 40px;
             font-weight: 600;
             letter-spacing: 1px;
         }
 
         .game-history {
             display: flex;
-            gap: 15px;
+            gap: 20px;
             justify-content: center;
             background: rgba(0, 0, 0, 0.2);
-            padding: 20px;
+            padding: 30px;
             border-radius: 15px;
             margin: 0 auto;
-            max-width: 600px;
+            max-width: 900px;
             position: relative;
         }
 
@@ -319,34 +321,41 @@
         .metrics-container {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
+            gap: 40px;
             margin: 0 auto;
+            max-width: 1400px;
+            padding: 20px;
         }
 
         .metrics-column {
             background: rgba(0, 0, 0, 0.2);
             border-radius: 20px;
-            padding: 30px;
+            padding: 40px;
             position: relative;
         }
 
         .metrics-column h3 {
-            font-size: 1.4rem;
+            font-size: 1.8rem;
             color: var(--text-primary);
-            margin-bottom: 25px;
+            margin-bottom: 35px;
             text-align: center;
             letter-spacing: 1px;
+            font-weight: 700;
+            background: linear-gradient(45deg, var(--accent-purple), var(--accent-pink));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
+            gap: 30px;
         }
 
         .h2h-stat-card {
             background: var(--glass-bg);
-            padding: 25px;
+            padding: 30px;
             border-radius: 15px;
             text-align: center;
             border: 1px solid var(--glass-border);
@@ -359,21 +368,22 @@
         }
 
         .h2h-stat-card h4 {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             color: var(--text-primary);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             font-weight: 600;
             letter-spacing: 0.5px;
         }
 
         .h2h-stat-value {
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: 800;
             background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
-            margin: 15px 0;
+            margin: 20px 0;
+            line-height: 1.2;
         }
 
         .h2h-stat-card p {
@@ -385,167 +395,78 @@
         .player-section {
             background: var(--glass-bg);
             border-radius: 20px;
-            padding: 30px;
+            padding: 40px;
+            margin: 40px auto;
             backdrop-filter: blur(10px);
             border: 1px solid var(--glass-border);
-            transition: all 0.3s ease;
-        }
-
-        .player-section:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(139, 92, 246, 0.1);
+            max-width: 1400px;
         }
 
         .metrics-section {
             background: rgba(0, 0, 0, 0.2);
             border-radius: 15px;
-            padding: 25px;
-            margin-bottom: 30px;
+            padding: 35px;
+            margin-bottom: 40px;
         }
 
         .metrics-section h3 {
-            font-size: 1.8rem;
-            color: var(--text-primary);
-            margin-bottom: 30px;
-            text-align: center;
-            letter-spacing: 1px;
-            font-weight: 700;
-            background: linear-gradient(45deg, var(--accent-purple), var(--accent-pink));
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
+            font-size: 2rem;
+            margin-bottom: 40px;
         }
 
         .metrics-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-            gap: 15px;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 25px;
         }
 
         .metric-item {
             background: var(--glass-bg);
-            padding: 20px 15px;
+            padding: 25px 20px;
             border-radius: 12px;
             text-align: center;
             border: 1px solid var(--glass-border);
-            transition: all 0.3s ease;
-        }
-
-        .metric-item:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(139, 92, 246, 0.1);
         }
 
         .metric-item h4 {
-            font-size: 1.1rem;
-            color: var(--text-primary);
-            margin-bottom: 10px;
-            font-weight: 600;
-        }
-
-        .metric-item .highlight {
-            font-size: 1.8rem;
-            font-weight: 700;
-            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-            margin: 8px 0;
-            display: block;
-        }
-
-        .metric-item p:not(.highlight) {
-            font-size: 0.85rem;
-            color: var(--text-secondary);
-            margin-top: 5px;
-        }
-
-        .games-section {
-            margin-top: 30px;
-        }
-
-        .games-section h3 {
-            font-size: 1.5rem;
-            color: var(--text-primary);
-            margin-bottom: 20px;
-            text-align: center;
-            letter-spacing: 1px;
-            font-weight: 600;
-        }
-
-        .team {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px;
-            padding: 15px;
-            background: rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
+            font-size: 1.3rem;
             margin-bottom: 15px;
         }
 
-        .team img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            border: 2px solid var(--glass-border);
+        .metric-item .highlight {
+            font-size: 2.2rem;
+            margin: 12px 0;
         }
 
-        .team span {
-            font-size: 1.1rem;
-            color: var(--text-primary);
-            font-weight: 500;
+        .games-section {
+            margin-top: 40px;
+        }
+
+        .games-section h3 {
+            font-size: 1.8rem;
+            margin-bottom: 30px;
         }
 
         .game-card {
             background: var(--glass-bg);
             border-radius: 15px;
+            padding: 25px;
+            margin: 20px auto;
+            max-width: 500px;
+        }
+
+        .team {
             padding: 20px;
-            margin: 15px auto;
-            border: 1px solid var(--glass-border);
-            backdrop-filter: blur(10px);
-            max-width: 400px;
-            transition: all 0.3s ease;
+            margin-bottom: 20px;
         }
 
-        .game-info {
-            text-align: center;
+        .team img {
+            width: 40px;
+            height: 40px;
         }
 
-        .team-vs {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 12px;
-        }
-
-        .team-vs img {
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            border: 2px solid var(--glass-border);
-        }
-
-        .team-vs span {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-        }
-
-        .score-info {
-            text-align: center;
-        }
-
-        .score-info .score {
+        .team span {
             font-size: 1.3rem;
-            font-weight: 600;
-            color: var(--text-primary);
-            margin-bottom: 8px;
-        }
-
-        .score-info .date {
-            font-size: 0.9rem;
-            color: var(--text-secondary);
         }
 
         .player-games-container {
