--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -603,6 +603,105 @@
                 grid-template-columns: repeat(2, 1fr);
             }
         }
+
+        /* Estilos para as tabs e conteúdo */
+        .tab-navigation {
+            display: flex;
+            justify-content: center;
+            gap: var(--spacing-sm);
+            margin: var(--spacing-xl) auto;
+            max-width: 600px;
+            background: rgba(0, 0, 0, 0.2);
+            padding: var(--spacing-sm);
+            border-radius: 30px;
+        }
+
+        .tab-button {
+            padding: var(--spacing-sm) var(--spacing-lg);
+            border: none;
+            background: transparent;
+            color: var(--text-secondary);
+            font-weight: 600;
+            cursor: pointer;
+            border-radius: 25px;
+            transition: all var(--transition-fast);
+            font-size: 1rem;
+        }
+
+        .tab-button.active {
+            background: linear-gradient(45deg, var(--accent-purple), var(--accent-pink));
+            color: var(--text-primary);
+            box-shadow: 0 4px 15px rgba(139, 92, 246, 0.3);
+        }
+
+        .tab-content {
+            display: none;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .tab-content.active {
+            display: block;
+            opacity: 1;
+        }
+
+        /* Ajustes nos containers principais */
+        .grid-container {
+            display: grid;
+            gap: var(--spacing-lg);
+            margin: var(--spacing-xl) auto;
+            max-width: 1400px;
+        }
+
+        .grid-2-columns {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 1200px) {
+            .grid-2-columns {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* Ajustes nos cards de métricas */
+        .metrics-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: var(--spacing-lg);
+            margin: 0 auto;
+            max-width: 1400px;
+        }
+
+        .section-title {
+            font-size: 1.8rem;
+            font-weight: 700;
+            margin-bottom: var(--spacing-lg);
+            text-align: center;
+            background: linear-gradient(90deg, var(--accent-purple), var(--accent-pink));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            letter-spacing: 0.8px;
+        }
+
+        /* Ajustes responsivos */
+        @media (max-width: 768px) {
+            .tab-navigation {
+                flex-wrap: wrap;
+                border-radius: var(--border-radius-md);
+                padding: var(--spacing-xs);
+            }
+
+            .tab-button {
+                flex: 1 1 auto;
+                font-size: 0.9rem;
+                padding: var(--spacing-xs) var(--spacing-sm);
+            }
+
+            .metrics-container {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 
@@ -1002,22 +1101,40 @@
 
         // Adicionar funcionalidade das tabs
         document.addEventListener('DOMContentLoaded', function () {
+            // Funcionalidade das tabs
             const tabs = document.querySelectorAll('.tab-button');
             const contents = document.querySelectorAll('.tab-content');
 
+            // Função para mostrar uma tab específica
+            function showTab(tabId) {
+                // Remove active de todas as tabs e conteúdos
+                tabs.forEach(tab => tab.classList.remove('active'));
+                contents.forEach(content => {
+                    content.classList.remove('active');
+                    content.style.display = 'none';
+                });
+
+                // Adiciona active na tab selecionada e seu conteúdo
+                const selectedTab = document.querySelector(`[data-tab="${tabId}"]`);
+                const selectedContent = document.getElementById(tabId);
+
+                if (selectedTab && selectedContent) {
+                    selectedTab.classList.add('active');
+                    selectedContent.classList.add('active');
+                    selectedContent.style.display = 'block';
+                }
+            }
+
+            // Adiciona evento de clique em cada tab
             tabs.forEach(tab => {
                 tab.addEventListener('click', () => {
-                    const target = tab.dataset.tab;
-
-                    // Remove active class from all tabs and contents
-                    tabs.forEach(t => t.classList.remove('active'));
-                    contents.forEach(c => c.classList.remove('active'));
-
-                    // Add active class to clicked tab and corresponding content
-                    tab.classList.add('active');
-                    document.getElementById(target).classList.add('active');
+                    const tabId = tab.dataset.tab;
+                    showTab(tabId);
                 });
             });
+
+            // Mostra a primeira tab por padrão
+            showTab('overview');
         });
     </script>
 </body>
